# duo_flask_auth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  exceptions.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull-request-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yaml
docs/: performance-tuning.md
duo_flask_auth/: README.md  __init.__.py  __init__.py  auth.py  cache.py  db_adapters.py  exceptions.py  setup.py  user_model.py
duo_flask_auth/examples/: README.md  basic_app.py  performance_app.py  secure_app.py
duo_flask_auth/examples/templates/: admin.html  base.html  create_user.htmnl  dashboard.html  home.html  profile.html  security_check.html
duo_flask_auth/examples/templates/admin/: cache.html  database_health.html  performance.html
duo_flask_auth/examples/templates/errors/: 404.html  500.html
duo_flask_auth/templates/: account_locked.html  disable_mfa.html  enable_mfa.html  forgot_password.html  login_page.html  password_expired.html  reset_password.html  unlock_account.html
tests/: __init__.py  test_auth.py  test_mfa.py  test_performance.py  test_security.py
