[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duo_flask_auth"
version = "0.5.0"
authors = [{ name = "Aaron Davis", email = "aaron.e.davis@gmail.com" }]
description = "Flask authentication library with Duo MFA support, enhanced security features, flexibility, and performance optimizations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "Flask>=2.0.0",
  "Flask-Login>=0.5.0",
  "Flask-WTF>=1.0.0",
  "duo-universal>=1.0.0",
  "pymongo>=4.0.0",
  "certifi>=2021.10.8",
  "Werkzeug>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/dirflash/duo_flask_auth"
"Bug Tracker" = "https://github.com/dirflash/duo_flask_auth/issues"
